--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "27.0.3"
     defaultConfig {
-        applicationId "com.example.wulee.notebook"
+        applicationId "com.example.sjtu.notebook"
         minSdkVersion 26
         targetSdkVersion 26
         versionCode 4
