--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,14 +40,10 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.RegistActivity"
-<<<<<<< HEAD
-            android:screenOrientation="portrait" />
-=======
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.SearchActivity"
             android:screenOrientation="portrait"/>
->>>>>>> f41c82a49f03307aff8e0d46bbf165a7044e945e
         <activity
             android:name="me.iwf.photopicker.PhotoPickerActivity"
             android:screenOrientation="portrait" />
@@ -60,7 +56,7 @@
         <activity
             android:name=".ui.UserActivity"
             android:label="@string/title_activity_user"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
