--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
     // https://mvnrepository.com/artifact/com.qcloud/qcloud-java-sdk
     compile group: 'com.qcloud', name: 'qcloud-java-sdk', version: '2.0.6'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 }
