--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "com.example.wulee.notebook"
-        minSdkVersion 26
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode 4
         versionName "1.0.4"
@@ -26,6 +26,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -49,5 +50,5 @@ dependencies {
     compile 'com.prolificinteractive:material-calendarview:1.4.3'
     // https://mvnrepository.com/artifact/com.qcloud/qcloud-java-sdk
     compile group: 'com.qcloud', name: 'qcloud-java-sdk', version: '2.0.6'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
+
 }
